Reinit pipeline document

--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -1,11 +1,10 @@
 <html>
 <head>
-  <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/phaseimpute: Nf-core pipeline for phasing and imputing genomic data.">
+  <meta name="description" content="nf-core/phaseimpute: MyDescription">
   <title>nf-core/phaseimpute Pipeline Report</title>
 </head>
 <body>
