--- a/assets/email_template.html
+++ b/assets/email_template.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <meta name="description" content="nf-core/phaseimpute: MyDescription">
+  <meta name="description" content="nf-core/phaseimpute: Phasing and imputation pipeline">
   <title>nf-core/phaseimpute Pipeline Report</title>
 </head>
 <body>
